--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -72,6 +72,10 @@
   &.hero-recording {
     background-image: url('/_images/Social Networks/FacebookCover/3.JPG');
   }
+  
+  &.hero-referrals {
+    background-image: url('/_images/Social Networks/FacebookCover/2.JPG');
+  }
 }
 
 // Modern hero with illustration layout
